src/components/UserActionMenu.module.css
.container {
  position: absolute;
  top: 0;
  right: 25%;
}

.container button {
  background: none;
  border: none;
  color: rgba(0, 0, 0, 0.6);
  cursor: pointer;
}

.container .menu {
  position: absolute;
  width: min-content;
  top: 0;
  right: -300%;
  background-color: var(--primary-light);
  pointer-events: none;
  opacity: 0;
  transform: translateY(-5px);
  transition: all 0.2s ease-in-out;
  transform-origin: bottom center;
  padding: 0.2rem;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.container .menu svg {
  color: var(--white);
  margin: 6px 0;
}

.container .menu.active {
  opacity: 1;
  transform: translateY(0);
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
  pointer-events: all;
}

.container .menu button {
  border-radius: 5px;
  transition: all 0.2s ease-in-out;
  border: none;
}

.container .menu button:hover {
  background-color: var(--primary-dark);
}

.slideIn {
  animation: slideIn 0.3s ease-in-out;
}

@keyframes slideIn {
  0% {
    transform: translateY(50%);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

.slideOut {
  animation: slideOut 0.3s ease-in-out;
}

@keyframes slideOut {
  0% {
    transform: translateY(0);
    opacity: 1;
  }
  100% {
    transform: translateY(50%);
    opacity: 0;
  }
}

